--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ page.title | strip_html }}</title>
+    <title>{{ page.pres_title | strip_html }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
