--- a/_layouts/presentation_index.html
+++ b/_layouts/presentation_index.html
@@ -3,12 +3,13 @@ layout: default
 ---
 
 <div class="presentation_index">
+
     {{ content }}
 
     <h1 class="page-heading">Presentations</h1>
     <ul>
         {% for presentation in site.presentations %}
-        <li><a href={{presentation.url | relative_url}}>{{presentation.pres_title}}</a></li>
+        <li><a href="{{ presentation.url | relative_url }}">{{ presentation.pres_title | escape }}</a></li>
         {% endfor %}
     </ul>
 </div>
