Trying to fix presentation listing

--- a/_layouts/presentation_index.html
+++ b/_layouts/presentation_index.html
@@ -8,7 +8,7 @@ layout: default
 
     <h1 class="page-heading">Presentations</h1>
     <ul>
-        {% for presentation in site.presentations %}
+        {% for presentation in site.presmd %}
         <li><a href="{{ presentation.url | relative_url }}">{{ presentation.pres_title | escape }}</a></li>
         {% endfor %}
     </ul>
