--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-          <ul>
+          <ul class="contact-list">
               <li>
                 <p>{{ site.description | escape }}</p>
               </li>
