tweaking spacing (hopefully)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
       <div class="footer-col footer-col-3">
           <ul class="contact-list">
               <li>
-                <p>{{ site.description | escape }}</p>
+                {{ site.description | escape }}
               </li>
               <li>
                   <p class="rss-subscribe"><a href="{{ "/feed.xml" | relative_url }}">RSS</a></p>
