changing up the layout some more...

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,6 +39,9 @@
               <li>
                   <p class="rss-subscribe"><a href="{{ "/feed.xml" | relative_url }}">RSS</a></p>
               </li>
+              <li>
+                  <a href="{{ "/pubkey.html" | relative_url }}">GPG Public Key</a>
+              </li>
           </ul>
       </div>
     </div>
