Removing paragraph tag from footer, for spacing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
       <div class="footer-col footer-col-3">
           <ul class="contact-list">
               <li>
-                  <p class="rss-subscribe"><a href="{{ "/feed.xml" | relative_url }}">RSS</a></p>
+                  <a href="{{ "/feed.xml" | relative_url }}">RSS</a>
               </li>
               <li>
                   <a href="{{ "/pubkey.html" | relative_url }}">GPG Public Key</a>
