Fiddling with link colors in presentations for readability

--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -7,6 +7,9 @@
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic);
       body { font-family: 'Ubuntu'; }
+      a {
+          color: green;
+      }
       h1, h2, h3 {
         font-weight: normal;
       }
