--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -39,7 +39,7 @@
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-      var slideshow = remark.create();
+var slideshow = remark.create({highlightStyle: zenburn});
     </script>
   </body>
 </html>
