tweaking link color

--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -8,7 +8,7 @@
       @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic);
       body { font-family: 'Ubuntu'; }
       a {
-          color: green;
+          color: #709080;
       }
       h1, h2, h3 {
         font-weight: normal;
