Adding styles for using columns in presentation slides. Adding first draft of my intro to APIs and REST presentation.

--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -28,6 +28,38 @@
         background: #3f3f3f;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      /* Allow for variable column layouts */
+      .cols {
+        display: flex;
+      }
+
+      .cols .col10 {
+        flex: 10%;
+      }
+      .cols .col20 {
+        flex: 20%;
+      }
+      .cols .col30 {
+        flex: 30%;
+      }
+      .cols .col40 {
+        flex: 40%;
+      }
+      .cols .col50 {
+        flex: 50%;
+      }
+      .cols .col60 {
+        flex: 60%;
+      }
+      .cols .col70 {
+        flex: 70%;
+      }
+      .cols .col80 {
+        flex: 80%;
+      }
+      .cols .col90 {
+        flex: 90%;
+      }
     </style>
   </head>
   <body>
